2010-10-06  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/status_monitor.php,
	operation/agentes/estado_ultimopaquete.php,
	operation/agentes/estado_monitores.php, godmode/agentes/module_manager.php:
	fixed the icon of policy in list of modules, now show when the module is
	unlinked. And cleaned source code style.
	
	Fixes: #3078716

2010-10-06  Sergio Martin <sergio.martin@artica.es>

	* include/fgraph.php
	operation/incidents/incident_statistics.php: Fixed the incident
	statistics for bug 3078118

2010-10-06 Dario Rodriguez <dario.rodriguez@artica.es>

	*operation/agentes/estado_agente.php, ver_agente.php: Fixed some problems 
	processing the input

2010-10-06  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/module_manager_editor.php: cleaned source code style.

2010-10-06  Miguel de Dios  <miguel.dedios@artica.es>

	* include/config_process.php: force the absolute path when include the
	languages translation files.

2010-10-05  Sancho Lerena  <slerena@artica.es>

    * include/config_process.php: Remove config['debug'] from prev. commit.

    * include/config_process.php: Set to 0 $config['debug'] by default to avoid
    debug messages on normal operation mode, developers should setup debug
    mode in their config.php file.

    * pandoradb_data.sql: Added default template and action as sample.

2010-10-05  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: cleaned source code style and optimize
	some parts (deleted redundant if sentences).
	
	* include/functions_db.php: cleaned source code style.

2010-10-05  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_ultimopaquete.php
	operation/agentes/estado_monitores.php: Added the policy
	column to the monitors in agent view and improve the header
	of force execution in few monitors view for bug: 3078713

2010-10-05  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_ultimopaquete.php: Added the policy